# StarRail

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/starrail/: __init__.py  constants.py  honkai_star_rail.py
src/starrail/_baseclass/: sr_screen.py  sr_stage.py
src/starrail/_bin/loader/: loader.py
src/starrail/_bin/pick/: __init__.py
src/starrail/_config/: config.json  config_handler.py  game_config.json
src/starrail/_data/: disclaimer.txt  path_config_ex.txt
src/starrail/_data/textfiles/: disclaimer.txt
src/starrail/_exceptions/: _exceptions.py
src/starrail/_utils/: _utils.py
src/starrail/_utils/controls/: keyboard.py  mouse.py
src/starrail/_utils/cv2_SIFT/: image_matcher.py
src/starrail/_utils/pick/: pick.py
src/starrail/automation/: recorder.py
src/starrail/automation/config/: automation_config_handler.py
src/starrail/automation/pixel_calculator/: pixel_calculator.py  resolution_detector.py
src/starrail/automation/units/: __init__.py  action.py  sequence.py
src/starrail/cmd/: cl_endpoints.py  cli_entrypoints.py  start_star_rail.py
src/starrail/config/: config_handler.py  starrail_config.json
src/starrail/controllers/: automation_controller.py  c_click_controller.py  star_rail_app.py  streaming_assets_controller.py  web_controller.py  webcache_controller.py
src/starrail/entrypoints/: entrypoint_handler.py  entrypoints.py  help_format_handler.py
src/starrail/exceptions/: exceptions.py  sr_exceptions.py
src/starrail/logic/: base_logic.py  logic_maps.py
src/starrail/user_interface/: __init__.py  ui_frontend.py
src/starrail/utils/: binary_decoder.py  game_detector.py  json_handler.py  perm_elevate.py  process_handler.py  utils.py
tests/: test_starrail.py  verify_package.py
(+13 files in other folders)
