[metadata]
name = starrail
version = 0.0.2
author = Kevin L.
author_email = kevinliu@vt.edu
description = Honkai: Star Rail Automation Package (auto-grind resources)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ReZeroE/StarRail
project_urls =
    Bug Tracker = https://github.com/ReZeroE/StarRail/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 1 - Planning

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
packages = starrail
where = src

[options.package_data]
mypackage = src/**/*.json

[options.entry_points]
console_scripts =
    starrail = starrail.cmd.cl_endpoints:execute_command