[metadata]
name = starrail
version = 1.0.2
author = Kevin L.
author_email = kevinliu@vt.edu
description = Honkai: Star Rail Command Line Tool (CLI)
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/ReZeroE/StarRail
project_urls =
    Bug Tracker = https://github.com/ReZeroE/StarRail/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 1 - Planning

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = file: requirements.txt
include_package_data = True
license = MIT

[options.packages.find]
packages = starrail
where = src

[options.entry_points]
console_scripts =
    starrail = starrail.entrypoints.entrypoints:start_starrail